--- a/index.html
+++ b/index.html
@@ -115,56 +115,56 @@
                     <div class="project-post carnivore">
                         <img src="images/vegan.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegan</a>                        
+                            <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post carnivore">
                         <img src="images/Vegetarian.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegetarian</a>                       
+                            <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vegan">
                         <img src="images/Vegan.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegan</a>                        
+                            <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vegan">
                         <img src="images/Vegetarian.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegetarian</a>                       
+                            <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vegan">
                         <img src="images/Carnivore.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">carnivore</a>                        
+                            <a class="link" href="＃">carnivore</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
                         <img src="images/Vegetarian.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegetarian</a>                       
+                            <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
                         <img src="images/Vegan.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">vegan</a>                        
+                            <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
                         <img src="images/Carnivore.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">carnivore</a>                       
+                            <a class="link" href="＃">carnivore</a>                       
                         </div>
                     </div>
                 </div>
