--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="project-post carnivore">
                         <img src="images/Carnivore.JPG" alt="">
                         <div class="hover-box">
-                            <a class="link" href="room.html">carnivore</a>
+                            <a class="link" href="＃">carnivore</a>
 
                         </div>
                     </div>
