--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="portfolio-box iso-call">
                     <div class="project-post carnivore">
-                        <img src="images/Carnivore.JPG" alt="">
+                        <img src="images/Carnivore.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">carnivore</a>
 
@@ -113,56 +113,56 @@
                     </div>
 
                     <div class="project-post carnivore">
-                        <img src="images/vegan.JPG" alt="">
+                        <img src="images/vegan.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post carnivore">
-                        <img src="images/Vegetarian.JPG" alt="">
+                        <img src="images/Vegetarian.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vegan">
-                        <img src="images/Vegan.JPG" alt="">
+                        <img src="images/Vegan.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vegan">
-                        <img src="images/Vegetarian.JPG" alt="">
+                        <img src="images/Vegetarian.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vegan">
-                        <img src="images/Carnivore.JPG" alt="">
+                        <img src="images/Carnivore.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">carnivore</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
-                        <img src="images/Vegetarian.JPG" alt="">
+                        <img src="images/Vegetarian.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegetarian</a>                       
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
-                        <img src="images/Vegan.JPG" alt="">
+                        <img src="images/Vegan.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegan</a>                        
                         </div>
                     </div>
 
                     <div class="project-post vagetarian">
-                        <img src="images/Carnivore.JPG" alt="">
+                        <img src="images/Carnivore.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">carnivore</a>                       
                         </div>
