--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="project-post carnivore">
-                        <img src="images/vegan.jpg" alt="">
+                        <img src="images/Vegan.jpg" alt="">
                         <div class="hover-box">
                             <a class="link" href="＃">vegan</a>                        
                         </div>
